# Gnsslab

./: CMakeLists.txt  LICENSE  README.md
data/: ABMF00GLP_R_20210010000_01D_MN.rnx  COD0MGXFIN_20250010000_01D_05M_ORB.SP3  IGS0OPSFIN_20250010000_01D_15M_ORB.SP3  WUHN00CHN_R_20250010000_01D_30S_MO.crx  WUM0MGXFIN_20250010000_01D_05M_ORB.SP3
data/Zero-baseline/: G01  G07  G08  G09  G14  G16  G21  G27  G30  oem719-202203031500-1.obs.rtk.kal.out  oem719-202203031500-1.obs.rtk.lsq.out  oem719-202203031500-1.obs.rtk.out  oem719-202203031500-1.obs.spp.out
doc/: rinex305.xlsx
examples/: exam-1.1-parse_opt.cpp  exam-1.2-parse_config.cpp  exam-2.1-eigen.cpp  exam-2.2-time_convert.cpp  exam-2.3-coord_convert1.cpp  exam-2.3-coord_convert2.cpp  exam-2.3-coord_convert3.cpp  exam-2.3-coord_convert4.cpp  exam-2.3-coord_convert5.cpp  exam-2.3-myself.cpp  exam-2.4-skyplot.cpp  exam-3.1-satid.cpp  exam-3.2-read_rinex_data.cpp  exam-4.1-gps_eph.cpp  exam-5.1-system_bias.cpp  exam-6.1-sppif.cpp  exam-7.1-cs_detect_mw.cpp  exam-8.1-sync_obs.cpp  exam-8.2-diff_station.cpp  exam-8.3-lambda.cpp  exam-8.4-rtk_lsq.cpp  exam-8.5-rtk_kal.cpp  spp.ini
lib/: ARLambda.cpp  ARLambda.hpp  CSDetector.cpp  CSDetector.h  ConfigData.h  ConfigReader.cpp  ConfigReader.h  Const.h  CoordConvert.h  CoordStruct.h  EphStore.h  Exception.h  GnssFunc.cpp  GnssFunc.h  GnssStruct.cpp  GnssStruct.h  KalmanFilter.cpp  KalmanFilter.hpp  MathUtils.hpp  NavEphBDS.cpp  NavEphBDS.hpp  NavEphGPS.cpp  NavEphGPS.hpp  RinexNavStore.cpp  RinexNavStore.hpp  RinexObsReader.cpp  RinexObsReader.h  Rx3ClockReader.cpp  Rx3ClockReader.hpp  SP3Store.cpp  SP3Store.hpp  SPPIFCode.cpp  SPPIFCode.h  SPPUCCodePhase.cpp  SPPUCCodePhase.h  SolverKalman.cpp  SolverKalman.h  SolverLSQ.cpp  SolverLSQ.h  StringUtils.h  (+6 more)
tools/: CRZ2RNX.BAT  RNX2CRZ.BAT
